# stellar-contracts

./: .gitignore  Architecture.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  RWA-SEP.md  RWA-doc.mdx  RWA.md  SECURITY.md  SEP-0051-RWA.md  check_verification_status.py  codecov.yml  rust-toolchain.toml  rustfmt.toml
.claude/commands/: code-quality.md  release-prep.md
.claude/skills/: code-quality.md  release-prep.md
certora/math/: Cargo.toml  certora_build.py
certora/math/src/specs/: math_sanity_rules.rs  mod.rs
certora/ownable/: Cargo.toml  certora_build.py
certora/ownable/confs/: ownable_integrity.conf  ownable_invariants.conf  ownable_nonpanic.conf  ownable_nonpanics.conf  ownable_panic.conf  ownable_panics.conf  ownable_sanity.conf  panic.conf
certora/ownable/src/: lib.rs  ownable_contract.rs
certora/ownable/src/specs/: helper.rs  mod.rs  ownable_integrity.rs  ownable_integrity_rules.rs  ownable_invariants.rs  ownable_non_panic_rules.rs  ownable_non_panics.rs  ownable_panic_rules.rs  ownable_panics.rs  ownable_sanity.rs  ownable_sanity_rules.rs
docs/: antora.yml  package-lock.json
examples/: DEPLOY.md
examples/fungible-governor-timelock/token/: Cargo.toml
examples/fungible-governor-timelock/token/src/: lib.rs  test.rs
examples/fungible-governor/governor/: Cargo.toml
examples/fungible-governor/governor/src/: governor.rs
examples/fungible-merkle-airdrop/: Cargo.toml
examples/fungible-merkle-airdrop/src/: contract.rs  test.rs
examples/fungible-merkle-airdrop/test_snapshots/test/: test_bad_claim.1.json  test_claimed_not_reset.1.json  test_double_claim.1.json  test_valid_claim.1.json
examples/fungible-pausable/: Cargo.toml  annen.rs
examples/fungible-pausable/src/: contract.rs  contract_token_interface.rs  test.rs
examples/fungible-pausable/test_snapshots/test/: initial_state.1.json  mint_fails_when_paused.1.json  transfer_fails_when_paused.1.json  transfer_from_works.1.json
examples/fungible-token-interface/: Cargo.toml
examples/fungible-token-interface/src/: contract.rs
examples/fungible-token-interface/test_snapshots/test/: burn_works.1.json  mint_works.1.json  transfer_from_fails_when_paused.1.json  transfer_works.1.json
examples/fungible-votes/: Cargo.toml
examples/fungible-votes/src/: contract.rs
examples/merkle-voting/: Cargo.toml
examples/merkle-voting/src/: contract.rs  test.rs
examples/merkle-voting/test_snapshots/test/: test_merkle_voting.1.json
examples/rwa/: Cargo.toml  README.md  build.sh
examples/rwa-compliance/: Cargo.toml
examples/rwa-compliance/src/: compliance.rs  identity_registry.rs  identity_verifier.rs  lib.rs  test.rs  token.rs
examples/rwa-country-restrict/: Cargo.toml  README.md
examples/rwa-country-restrict/src/: contract.rs  lib.rs  test.rs
examples/rwa-transfer-restrict/: Cargo.toml  README.md
examples/rwa-transfer-restrict/src/: contract.rs  lib.rs  test.rs
examples/rwa/claim-issuer/: Cargo.toml
examples/rwa/claim-issuer/src/: contract.rs  test.rs
examples/rwa/claim-topics-and-issuers/: Cargo.toml
examples/rwa/claim-topics-and-issuers/src/: contract.rs  test.rs
examples/rwa/compliance/: Cargo.toml
examples/rwa/compliance-country-allow/: Cargo.toml
examples/rwa/compliance-country-allow/src/: contract.rs  test.rs
examples/rwa/compliance-country-restrict/: Cargo.toml
examples/rwa/compliance-country-restrict/src/: contract.rs  test.rs
examples/rwa/compliance-initial-lockup-period/: Cargo.toml
examples/rwa/compliance-initial-lockup-period/src/: contract.rs  test.rs
examples/rwa/compliance-max-balance/: Cargo.toml
examples/rwa/compliance-max-balance/src/: contract.rs  test.rs
examples/rwa/compliance-modules/country-restriction-module/: Cargo.toml
examples/rwa/compliance-modules/country-restriction-module/src/: contract.rs  test.rs
examples/rwa/compliance-modules/transfer-limit-module/: Cargo.toml
examples/rwa/compliance-modules/transfer-limit-module/src/: contract.rs  test.rs
examples/rwa/compliance-supply-limit/: Cargo.toml
examples/rwa/compliance-supply-limit/src/: contract.rs  test.rs
examples/rwa/compliance-time-transfers-limits/: Cargo.toml
examples/rwa/compliance-time-transfers-limits/src/: contract.rs  test.rs
examples/rwa/compliance-transfer-allow/: Cargo.toml
examples/rwa/compliance-transfer-allow/src/: contract.rs  test.rs
examples/rwa/compliance-transfer-restrict/: Cargo.toml
examples/rwa/compliance-transfer-restrict/src/: contract.rs  test.rs
examples/rwa/compliance/src/: contract.rs  test.rs
examples/rwa/identity/: Cargo.toml
examples/rwa/identity-claims/: Cargo.toml
examples/rwa/identity-claims/src/: contract.rs  test.rs
examples/rwa/identity-registry/: Cargo.toml
examples/rwa/identity-registry-storage/: Cargo.toml
examples/rwa/identity-registry-storage/src/: test.rs
examples/rwa/identity-registry/src/: contract.rs  test.rs
examples/rwa/identity-verifier/: Cargo.toml
examples/rwa/identity-verifier/src/: contract.rs  test.rs
examples/rwa/identity/src/: contract.rs  test.rs
examples/rwa/integration-test/: Cargo.toml
examples/rwa/integration-test/src/: lib.rs  test.rs
examples/rwa/rwa-token/src/: contract.rs  test.rs
examples/rwa/sign-claim/: Cargo.toml
examples/rwa/src/: claim_issuer.rs  claim_topics_and_issuers.rs  compliance.rs  compliance_modules.rs  contract.rs  identity_claims.rs  identity_registry_storage.rs  lib.rs  rwa_token.rs  test.rs
examples/rwa/testdata/: claim_issuer_example.wasm  claim_topics_and_issuers_example.wasm  compliance_example.wasm  country_restriction_module_example.wasm  identity_claims_example.wasm  identity_registry_storage_example.wasm  rwa_token_example.wasm  transfer_limit_module_example.wasm
examples/rwa/token/: Cargo.toml
examples/rwa/token/src/: contract.rs
examples/sac-admin-generic/: Cargo.toml
examples/sac-admin-generic/src/: contract.rs  lib.rs  test.rs
examples/sac-admin-generic/test_snapshots/test/: test_sac_generic.1.json
examples/timelock-controller/: Cargo.toml
examples/timelock-controller/src/: contract.rs  lib.rs  test.rs
(+349 files in other folders)
