[workspace]
resolver = "2"
members = [
    "examples/fungible-allowlist",
    "examples/fungible-blocklist",
    "examples/fungible-capped",
    "examples/fungible-merkle-airdrop",
    "examples/fungible-pausable",
    "examples/fungible-token-interface",
    "examples/merkle-voting",
    "examples/nft-access-control",
    "examples/nft-consecutive",
    "examples/nft-enumerable",
    "examples/nft-royalties",
    "examples/nft-sequential-minting",
    "examples/ownable",
    "examples/pausable",
    "examples/sac-admin-generic",
    "examples/sac-admin-wrapper",
    "examples/upgradeable/*",
    "packages/access",
    "packages/contract-utils",
    "packages/macros",
    "packages/test-utils/*",
    "packages/tokens",

    # Diamond Proxy
    "packages/diamond-proxy/diamond-proxy-core",
    # Main Contracts
    "packages/diamond-proxy/contracts/diamond-proxy",
    "packages/diamond-proxy/stellar-facet-macro",
    "packages/diamond-proxy/contracts/stellar-diamond-factory",
    "packages/diamond-proxy/contracts/diamond-manager",
    # Test Utilities + Contracts
    "packages/diamond-proxy/contracts/shared-storage",
    "packages/diamond-proxy/contracts/test-utils/shared-storage-1",
    "packages/diamond-proxy/contracts/test-utils/shared-storage-2",
    # Build utils
    "packages/diamond-proxy/build-utils",
    # Test infrastructure
    "packages/diamond-proxy/diamond-test-utils",
]
exclude = ["examples/upgradeable/testdata"]

[workspace.package]
authors = ["OpenZeppelin"]
edition = "2021"
license = "MIT"
repository = "https://github.com/OpenZeppelin/stellar-contracts"
documentation = "https://docs.openzeppelin.com/stellar-contracts/"
keywords = ["stellar", "soroban", "smart-contracts", "standards"]
categories = ["no-std", "wasm"]
version = "0.4.1"

[workspace.dependencies]
soroban-sdk = "22.0.8"
soroban-env-common = "22.1"
proc-macro2 = "1.0"
proptest = "1"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
soroban-test-helpers = "0.2.3"
hex-literal = "0.4.1"
ed25519-dalek = "2.1.1"

# members
stellar-access = { path = "packages/access" }
stellar-contract-utils = { path = "packages/contract-utils" }
stellar-event-assertion = { path = "packages/test-utils/event-assertion" }
stellar-tokens = { path = "packages/tokens" }
stellar-macros = { path = "packages/macros" }

# diamond proxy

# Primary Workspace Members
stellar-diamond-proxy-core = { path = "packages/diamond-proxy/diamond-proxy-core" }
stellar-facet-macro = { path = "packages/diamond-proxy/stellar-facet-macro" }

# Core contracts
stellar-diamond-proxy = { path = "packages/diamond-proxy/contracts/diamond-proxy" }
stellar-diamond-factory = { path = "packages/diamond-proxy/contracts/stellar-diamond-factory" }
stellar-diamond-manager = { path = "packages/diamond-proxy/contracts/diamond-manager" }
stellar-shared-storage = { path = "packages/diamond-proxy/ontracts/shared-storage" }

# Build utils
stellar-build-utils = { path = "packages/diamond-proxy/build-utils" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# For more information about this profile see https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true
