[workspace]
resolver = "2"
members = [
    "examples/fungible-allowlist",
    "examples/fungible-blocklist",
    "examples/fungible-capped",
    "examples/fungible-merkle-airdrop",
    "examples/fungible-pausable",
    "examples/fungible-token-interface",
    "examples/merkle-voting",
    "examples/nft-access-control",
    "examples/nft-consecutive",
    "examples/nft-enumerable",
    "examples/nft-royalties",
    "examples/nft-sequential-minting",
    "examples/ownable",
    "examples/pausable",
    "examples/rwa",
    "examples/sac-admin-generic",
    "examples/sac-admin-wrapper",
    "examples/upgradeable/*",
    "packages/access",
    "packages/contract-utils",
    "packages/macros",
    "packages/test-utils/*",
    "packages/tokens",
]
exclude = ["examples/upgradeable/testdata"]

[workspace.package]
authors = ["OpenZeppelin"]
edition = "2021"
license = "MIT"
repository = "https://github.com/OpenZeppelin/stellar-contracts"
documentation = "https://docs.openzeppelin.com/stellar-contracts/"
keywords = ["stellar", "soroban", "smart-contracts", "standards"]
categories = ["no-std", "wasm"]
version = "0.4.1"

[workspace.dependencies]
soroban-sdk = { git = "https://github.com/ahalabs/rs-soroban-sdk", rev = "dfddbff7ef3e4f8f83f4b8a48a4e5c19be685dd9" }
#
proc-macro2 = "1.0"
proptest = "1"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
soroban-test-helpers = "0.2.3"
k256 = "0.13.4"
p256 = "0.13.2"
hex-literal = "1.0.0"
ed25519-dalek = "2.0.0"

# members
stellar-access = { path = "packages/access" }
stellar-contract-utils = { path = "packages/contract-utils" }
stellar-event-assertion = { path = "packages/test-utils/event-assertion" }
stellar-tokens = { path = "packages/tokens" }
stellar-macros = { path = "packages/macros" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# For more information about this profile see https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true
