[workspace]
resolver = "2"
members = [
    "examples/fungible-allowlist",
    "examples/fungible-blocklist",
    "examples/fungible-capped",
    "examples/fungible-merkle-airdrop",
    "examples/fungible-pausable",
    "examples/fungible-vault",
    "examples/merkle-voting",
    "examples/nft-access-control",
    "examples/nft-consecutive",
    "examples/nft-enumerable",
    "examples/nft-royalties",
    "examples/nft-sequential-minting",
    "examples/ownable",
    "examples/pausable",
    #"examples/rwa",
    "examples/sac-admin-generic",
    "examples/sac-admin-wrapper",
    "examples/multisig/*",
    "examples/upgradeable/*",
    "packages/accounts",
    "packages/access",
    "packages/contract-utils",
    "packages/macros",
    "packages/test-utils/*",
    "packages/tokens"
]
exclude = ["examples/upgradeable/testdata"]

[workspace.package]
authors = ["OpenZeppelin"]
edition = "2021"
license = "MIT"
repository = "https://github.com/OpenZeppelin/stellar-contracts"
documentation = "https://docs.openzeppelin.com/stellar-contracts/"
keywords = ["stellar", "soroban", "smart-contracts", "standards"]
categories = ["no-std", "wasm"]
version = "0.5.1"

[workspace.dependencies]
# certora change
soroban-sdk = {package = "soroban-sdk", version = "=22.0.8", default-features = false}
proc-macro2 = "1.0"
proptest = "1"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
soroban-test-helpers = "0.2.3"
# certora change
hex-literal = "0.4.0" # only used in tests, helps fix rust-analyzer issues
ed25519-dalek = "2.1.1"
k256 = "0.13.4"
p256 = "0.13.2"
serde = { version = "1", default-features = false }
serde-json-core = { version = "0.6.0", default-features = false }
base64ct = { version = "=1.6.0" }

# members
stellar-access = { path = "packages/access" }
stellar-accounts = { path = "packages/accounts" }
stellar-contract-utils = { path = "packages/contract-utils" }
stellar-event-assertion = { path = "packages/test-utils/event-assertion" }
stellar-tokens = { path = "packages/tokens" }
stellar-macros = { path = "packages/macros" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# For more information about this profile see https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true

[workspace.dependencies.cvlr]
version = "0.4.0"
default-features = false

[workspace.dependencies.cvlr-soroban]
git = "https://github.com/chandrakananandi/cvlr-soroban.git"
branch = "soroban-22.0.8"
# path = "/Users/chandrakananandi/research/cvlr-soroban/cvlr-soroban"

[workspace.dependencies.cvlr-soroban-macros]
git = "https://github.com/chandrakananandi/cvlr-soroban.git"
branch = "soroban-22.0.8"
# path = "/Users/chandrakananandi/research/cvlr-soroban/cvlr-soroban-macros"

[workspace.dependencies.cvlr-soroban-derive]
git = "https://github.com/chandrakananandi/cvlr-soroban.git"
branch = "soroban-22.0.8"
# path = "/Users/chandrakananandi/research/cvlr-soroban/cvlr-soroban-derive"