[package]
name = "ownable-harness"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
publish = true
description = "Ownable FV harness"


[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true}
stellar-access = { workspace = true }
stellar-macros = { workspace = true }

cvlr = { workspace = true, default-features = false }
cvlr-soroban = { workspace = true }
cvlr-soroban-macros = { workspace = true }
cvlr-soroban-derive = { workspace = true }


[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[features]
certora = ["stellar-access/certora"]