[package]
name = "fungible-merkle-airdrop-example"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false
version.workspace = true

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
stellar-tokens = { workspace = true }
stellar-ownable = { workspace = true }
stellar-crypto = { workspace = true }
stellar-merkle-distributor = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
hex-literal = { workspace = true }
stellar-proc-macros = { workspace = true }
