[package]
name = "fungible-pausable-example"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false
version.workspace = true

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
stellar-contract-utils = { workspace = true, features = ["pausable"] }
stellar-macros = { workspace = true }
stellar-tokens = { workspace = true, features = ["fungible"] }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
