[package]
name = "fungible-token-interface-example"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false
version.workspace = true

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
openzeppelin-stellar-pausable = { workspace = true }
openzeppelin-stellar-pausable-macros = { workspace = true }
openzeppelin-stellar-fungible = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
