[package]
name = "rwa-compliance-example"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false
version.workspace = true

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
stellar-access = { workspace = true }
stellar-contract-utils = { workspace = true }
stellar-macros = { workspace = true }
stellar-tokens = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
stellar-compliance-country-allow = { path = "../../packages/compliance-modules/modules/country-allow" }
stellar-compliance-country-restrict = { path = "../../packages/compliance-modules/modules/country-restrict" }
stellar-compliance-initial-lockup-period = { path = "../../packages/compliance-modules/modules/initial-lockup-period" }
stellar-compliance-max-balance = { path = "../../packages/compliance-modules/modules/max-balance" }
stellar-compliance-supply-limit = { path = "../../packages/compliance-modules/modules/supply-limit" }
stellar-compliance-time-transfers-limits = { path = "../../packages/compliance-modules/modules/time-transfers-limits" }
stellar-compliance-transfer-restrict = { path = "../../packages/compliance-modules/modules/transfer-restrict" }
