[package]
name = "rwa-example"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false
version.workspace = true

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
stellar-access = { workspace = true, features = ["roles"] }
stellar-macros = { workspace = true }
stellar-tokens = { workspace = true, features = ["rwa"] }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
